<resources>
    <string name="app_name">Gertamo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="data" translatable="false">Data Urodzenia</string>
    <string name="register">Zarejestruj się</string>
    <string name="register_bar" translatable="false">Rejestracja</string>
    <string name="login">Zaloguj</string>
    <string name="forgot_password" translatable="false">Zapomniałeś hasła? <font color='#0000EE'><u>Kliknij tutaj</u></font></string>
    <string name="more_info_bar" translatable="false">Więcej info</string>
    <string name="logout">Wyloguj</string>
    <string name="info_text" translatable="false">Aplikacja gertamo jest na wczesnym etapie rozwoju i przyda nam się Twoja opinia :)</string>
    <string name="send_btn" translatable="false">Wyślij opinię</string>
    <string name="contact" translatable="false">Kontakt</string>
    <string name="cooperation" translatable="false">Współpraca</string>
    <string name="privacy_policy" translatable="false">Polityka prywatności</string>
    <string name="privacy_policy_title" translatable="false"><b>POLITYKA PRYWATNOŚCI APLIKACJI MOBILNEJ “GERTAMO”</b></string>
    <string name="privacy_policy_par_1" translatable="false"><b>§ 1.\nPostanowienia ogólne</b></string>
    <string name="privacy_policy_par_1_content" translatable="false">
        <b>1.</b> Niniejsza Polityka Prywatności (zwana dalej <b>„Polityką Prywatności”</b>) określa sposób zbierania, przetwarzania i przechowywania danych osobowych koniecznych do realizacji usług świadczonych za pośrednictwem aplikacji mobilnej (zwanej dalej <b>„Aplikacją</b>) przez firmę Gertamo Mateusz Stasicki.\n
        <b>2.</b> Użytkownik przyjmuje do wiadomości, że Administratorem danych osobowych jest firma Gertamo Mateusz Stasicki, z siedzibą Ciosmy 51, 23-400 Biłgoraj, NIP:9182178925 (zwana dalej <b>„Administratorem”</b>).\n
        <b>3.</b> Użytkownikiem jest każda osoba fizyczna korzystająca z usług świadczonych za pośrednictwem Aplikacji (zwana dalej <b>“Użytkownikiem”</b>).\n
        <b>4.</b> Użytkownik przyjmuje do wiadomości, że udostępnianie przez niego danych osobowych jest dobrowolne. Udostępnianie Administratorowi danych osobowych przez Użytkownika nastąpi po zaakceptowaniu Polityki Prywatności podczas rejestracji w Aplikacji.\n
        <b>5.</b> Dane osobowe, udostępniane przez Użytkownika, mogą być wykorzystywane przez Administratora do wysyłania Użytkownikowi informacji handlowych o nowościach i ofertach Administratora, wyłącznie w sytuacji, gdy Użytkownik wyraził zgodę na otrzymywanie tego typu informacji.\n
        <b>6.</b> Niniejszym Użytkownik akceptuje zasady zawarte w Polityce Prywatności i w Regulaminie.
    </string>
    <string name="privacy_policy_par_2" translatable="false"><b>§ 2.\nDane zbierane automatycznie</b></string>
    <string name="privacy_policy_par_2_content" translatable="false">
        <b>1.</b> Administrator nie zbiera bez zgody Użytkownika danych osobowych, a wyłącznie dane nieposiadające takiego przymiotu, w szczególności dane demograficzne i dane dotyczące użytkowania Aplikacji. Zbieranie danych opisanych w zdaniu poprzednim odbywa się automatycznie (zwane dalej <b>„Dane zbierane automatycznie”</b>).\n
        <b>2.</b> Dane zbierane automatycznie nie umożliwiają jednoznacznej identyfikacji Użytkownika.\n
        <b>3.</b> Dane zbierane automatycznie mogą służyć Administratorowi do poprawy, jakości świadczonych usług, w szczególności w przypadku wystąpienia błędu Aplikacji.\n
        <b>4.</b> Nie ma możliwości zmiany bądź usunięcia danych zbieranych automatycznie.
    </string>
    <string name="privacy_policy_par_3" translatable="false"><b>§ 3.\nDane zbierane w celu nawiązania kontaktu</b></string>
    <string name="privacy_policy_par_3_content" translatable="false">
        <b>1.</b> W przypadkach kontaktowania się Administratora z Użytkownikiem (w przypadku odebrania nagrody przez Użytkownika), określonych w Regulaminie dotyczącego każdego konkursu, Administrator będzie wymagał podania przez Użytkownika: imienia, nazwiska oraz numeru konta bankowego, (zwane dalej: <b>„Dane zbierane w celu nawiązania kontaktu”</b>).\n
        <b>2.</b> Podanie przez Użytkownika Danych zbieranych w celu nawiązania kontaktu jest dobrowolne, jednakże stanowić będzie wyłączną podstawę przekazania nagrody konkursowej Użytkownikowi.\n
        <b>3.</b> Dane zbierane w celu nawiązania kontaktu będą wykorzystywane wyłącznie w celu umożliwienia poprawnej, pełnej i sprawnej komunikacji pomiędzy Administratorem a Użytkownikiem.
    </string>
    <string name="privacy_policy_par_4" translatable="false"><b>§ 4.\nZbieranie danych osobowych</b></string>
    <string name="privacy_policy_par_4_content" translatable="false">
        <b>1.</b> W trakcie rejestracji w Aplikacji oraz podczas korzystania z Aplikacji, Administrator może domagać się podania przez Użytkownika danych osobowych, w celu realizacji usług świadczonych przez Administratora za pośrednictwem Aplikacji.\n
        <b>2.</b> Dane osobowe Użytkownika zbierane w sposób określony w §4 pkt 1 Polityki Prywatności obejmuje m.in.: nazwisko, imię, adres e-mail, rok urodzenia, płeć, numer konta bankowego, informacje o koncie (hasło, indywidualne ID Użytkownika), dane z galerii zdjęć.\n
        <b>3.</b> W celu zapewnienia poprawnego funkcjonowania Aplikacji oraz możliwość korzystania ze wszystkich jej funkcjonalności wymagany jest dostęp do aparatu oraz galerii zdjęć Użytkownika.
    </string>
    <string name="privacy_policy_par_5" translatable="false"><b>§ 5.\nPrzetwarzanie danych osobowych</b></string>
    <string name="privacy_policy_par_5_content" translatable="false">
        <b>1.</b> Zebrane dane osobowe Użytkownika będą wykorzystywane przez Administratora celem dostarczenia wybranej przez Użytkownika usługi.\n
        <b>2.</b> Zbierane przez Administratora dane osobowe Użytkowników przetwarzane są w sposób zgodny z zakresem udzielonego przez Użytkownika zezwolenia lub na podstawie innych ustawowych przesłanek legalizujących przetwarzanie danych (przede wszystkim w celu realizacji usług oraz w prawnie usprawiedliwionym celu - marketingu bezpośrednim naszych produktów lub usług), zgodnie z wymogami prawa polskiego, w szczególności w zgodzie z ustawą z dnia 29 sierpnia 1997 r. o ochronie danych osobowych. Jako Administrator danych osobowych Użytkowników aplikacji mobilnych możemy w drodze umowy powierzać przetwarzanie tych danych innym podmiotom, w tym zagranicznym, w trybie art. 31 ustawy z dnia 29 sierpnia 1997 r. o ochronie danych osobowych.\n
        <b>3.</b> Administrator może jednak ujawnić współpracującym z nim podmiotom opracowanie zbiorcze czy ogólne zestawienia statystyczne. Zestawienia takie dotyczą głównie ogólnego użytkowania naszej usługi i nie zawierają danych pozwalających na identyfikację poszczególnych Użytkowników.\n
        <b>4.</b> W związku z udostępnieniem Aplikacji Administrator przechowuje informacje w urządzeniu zewnętrznej bazie danych i posiada dostęp do informacji tam przechowywanych.\n
        <b>5.</b> Działania, o których mowa w §5 pkt 4 wykonywane są w celu:\n
        \u0020\u0020\u0020\u0020<b>a.</b> optymalizacji korzystania z aplikacji mobilnych,\n
        \u0020\u0020\u0020\u0020<b>b.</b> tworzenia statystyk, które pomagają zrozumieć, w jaki sposób Użytkownicy korzystają z aplikacji mobilnych, co umożliwia ulepszanie ich struktury i zawartości,\n
        \u0020\u0020\u0020\u0020<b>c.</b> tworzenia statystyk w celu ich prezentowania, w tym udostępniania partnerom Administratora.
    </string>
    <string name="privacy_policy_par_6" translatable="false"><b>§ 6.\nPrawa i obowiązki Administratora</b></string>
    <string name="privacy_policy_par_6_content" translatable="false">
        <b>1.</b> Administrator zobowiązuje się przetwarzać dane osobowe Użytkownika z zachowaniem wymogów Ustawy z dnia 29 sierpnia 1997 roku o ochronie danych osobowych oraz Ustawy z dnia 18 lipca 2002 roku o świadczeniu usług drogą elektroniczną.\n
        <b>2.</b> Administrator gwarantuje zapewnienie odpowiednich środków technicznych i organizacyjnych zapewniających bezpieczeństwo przetwarzanych danych osobowych, w szczególności uniemożliwiających dostęp do nich nieuprawnionym osobom trzecim, lub ich przetwarzania z naruszeniem przepisów powszechnie obowiązującego prawa, zapobiegających utracie danych osobowych, ich uszkodzeniu lub zniszczeniu.\n
        <b>3.</b> Dane osobowe Użytkownika będą przechowywane tak długo, jak będzie to konieczne do realizacji przez Administratora usług świadczonych za pośrednictwem Aplikacji.\n
        <b>4.</b> Administrator ma prawo udostępniania danych osobowych Użytkownika: spółkom zależnym; stronom trzecim w przypadku sprzedaży im całości lub części swoich udziałów, lub w przypadku fuzji Administratora ze stroną trzecią, innym podmiotom trzecim, które zaakceptowały Politykę Prywatności, o ile Administrator zawarł z nim umowę konieczną do realizacji przez Administratora usług świadczonych za pośrednictwem Aplikacji; właściwym organom, które zgłoszą konieczność udostępnienia danych osobowych w oparciu o odpowiednie podstawy powszechnie obowiązującego prawa.
    </string>
    <string name="privacy_policy_par_7" translatable="false"><b>§ 7.\nPrawa i obowiązki Użytkownika</b></string>
    <string name="privacy_policy_par_7_content" translatable="false">
        <b>1.</b> Użytkownik ma prawo dostępu do swoich danych osobowych za pośrednictwem kontaktu z Administratorem poprzez wiadomość e-mail na adres support@gertamo.pl.\n
        <b>2.</b> Użytkownik może w każdej chwili dokonać modyfikacji, zmiany, uzupełnienia lub usunięcia udostępnionych danych osobowych, za pośrednictwem narzędzi dostępnych w Aplikacji lub poprzez wiadomość e-mail na adres: support@gertamo.pl\n
        <b>3.</b> W przypadku trwałego usunięcia przez Użytkownika danych osobowych, koniecznych do realizacji przez Administratora usług świadczonych za pośrednictwem Aplikacji, Użytkownik traci możliwość korzystania z tych usług.\n
        <b>4.</b> Administrator zastrzega sobie prawo wprowadzenia zmian w Polityce Prywatności, o czym poinformuje Użytkownika za pośrednictwem Aplikacji lub poczty elektronicznej na adres e-mail podany podczas rejestracji. Jeżeli Użytkownik nie wyrazi zgody na wprowadzone zmiany, zobowiązany jest trwale usunąć Aplikację ze swojego urządzenia mobilnego.
    </string>
    <string name="privacy_policy_par_8" translatable="false"><b>§ 8.\nPostanowienia końcowe</b></string>
    <string name="privacy_policy_par_8_content" translatable="false">
        <b>1.</b> Administrator oświadcza, że postara się zapewnić Użytkownikom wysoki poziom bezpieczeństwa w zakresie korzystania z Aplikacji, nie ma jednak wpływu na zagwarantowanie pełnego bezpieczeństwa transmisji przez Internet. Wszystkie zdarzenia mające wpływ na bezpieczeństwo przekazu informacji należy zgłaszać na adres: support@gertamo.pl.\n
        <b>2.</b> Polityka Prywatności dostępna jest za pośrednictwem aplikacji oraz na stronie internetowej:</string>
    <string name="privacy_policy_par_8_hyperlink" translatable="false"><a href="https://drive.google.com/file/d/1iKJBt-I5Fa9R3pFK03gYQIQ4Tw9mw8C-/view?usp=sharing"> Politykę prywatności</a></string>
    <string name="privacy_policy_par_8_content_cd" translatable="false">
        <b>3.</b> Polityka Prywatności obowiązuje od dnia 02 listopada 2021 roku.
    </string>
    <string name="facebook"><a href="https://www.facebook.com/GertamoApp">GertamoAPP</a></string>
    <string name="instagram"><a href="https://www.instagram.com/gertamo.app/">gertamo.app</a></string>
    <string name="tik_tok"><a href="https://www.tiktok.com/@gertamo.app">gertamo.app</a></string>
    <string name="sklep"><a href="https://gertamo.teetres.com/">Nasz sklep</a></string>
</resources>