<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gertamo.gertamo.LoginActivity"
    android:id="@+id/login_activity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_bar_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bar"
        android:text="GERTAMO"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="40dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/email_id"
            android:labelFor="@id/email"
            android:hint="Email"
            android:layout_width="match_parent"
            android:layout_marginStart="13dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hasło"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/login_password_id"
            android:labelFor="@id/hasło"
            android:hint="Hasło"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="textPassword"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/login"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:layout_marginTop="25dp"/>

<!--        <Button-->
<!--            android:id="@+id/btn_change_lang"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/change_lang"/>-->
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        />
        </LinearLayout>
    </ScrollView>
</LinearLayout>