<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/app_bar_dash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bar"
        android:text="@string/more_info_bar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_dash">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_bar_dash"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_text"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/info"
                android:layout_margin="20dp"
                android:background="@color/browser_actions_bg_grey"
                android:ems="10"
                android:gravity="start|top"
                android:textColor="@color/black"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/send_btn" />
            <Button
                android:id="@+id/ocena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="Oceń naszą aplikację w Sklepie Play" />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nasze Socal Media"/>
            <LinearLayout
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_facebook"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/facebook"
                    android:textSize="20dp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/instagram"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_instagram"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/instagram"
                    android:textSize="20dp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tik_tok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_tiktok"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tik_tok"
                    android:textSize="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nasz sklep"/>
            <LinearLayout
                android:id="@+id/sklep"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sklep"
                    android:textSize="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <TextView
                android:id="@+id/contact_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/contact"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="kontakt@gertamo.pl"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/cooperation_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/cooperation"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/cooperation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="wspolpraca@gertamo.pl"
                android:textSize="20dp" />
            <LinearLayout
                android:id="@+id/photoCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <!--                <TextView-->
                <!--                    android:id="@+id/num"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginLeft="20dp"-->
                <!--                    android:layout_marginTop="20dp"-->
                <!--                    android:text="Liczba przesłanych zdjęć:"-->
                <!--                    android:textSize="20dp" />-->

                <!--                <TextView-->
                <!--                    android:id="@+id/numxx"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginLeft="5dp"-->
                <!--                    android:text="0"-->
                <!--                    android:textStyle="bold"-->
                <!--                    android:layout_marginTop="20dp"-->
                <!--                    android:textSize="20dp" />-->
            </LinearLayout>
            <Button
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="Wyświetl ostatnią wiadomość" />
            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/logout" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>